[package]
name = "valradar"
version = "0.1.1"
edition = "2024"
build = "src/build.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }
lazy_static = "1.4"
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.97"
crossbeam = "0.8.3"
comfy-table = "7.1.4"
terminal_size = "0.4.2"
crossterm = "0.27.0"
indicatif = "0.17.11"
colored = "3.0.0"
homedir = "0.3.4"
